--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "momosewa",
+  "name": "momosewa_frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -31,6 +31,7 @@
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "typewriter-effect": "^2.22.0",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
